# RPG

./: pyproject.toml
version1/: main.py
version1/BancoDados/: Contas.json  Personagens.json
version1/BancoDados/Jogo/: atributosbase.json  dias.json  lore.json  xpcomplementar.json
version1/BoxMenu/: caixageral.py  login.py
version1/Jogo/: game.py  menu.py
version1/Jogo/Configuracoes/: AtualizarDescricao.py  CriarPersonagem.py  SelecionarPersonagem.py
version1/Jogo/Eventos/: dia.py  sorte.py
version1/Jogo/Raizes/: adega.py  caldeirao.py  campoTreinamento.py  cuiafurada.py  diario.py  ferreiro.py  mapa.py  sortimentosVariados.py  teatroAmazonas.py
version1/Lore/: dias.md  info1.md  info2.md  trash.md
version1/Rolls/: dados.py
