[project]
name = "rpg"
version = "0.1.0"
description = "Jogs elaborados com estilo rpg. @oziiel_juniior"
authors = [
    {name = "Oziel Junior",email = "ozieljr14@gmail.com"}
]
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

